Made the system back in hebrew. Added few unlocalized strings. fixed text align

--- a/app/assets/stylesheets/camps.css.scss
+++ b/app/assets/stylesheets/camps.css.scss
@@ -88,7 +88,6 @@ div label input {
 
 .granting-label {
     display:block;
-    text-align: left;
     margin-top: 10px;
 }
 
